@@ -1,11 +1,10 @@
 package mx.gob.pjpuebla.trials.core.personas;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import jakarta.ws.rs.core.MediaType;
 import mx.gob.pjpuebla.trials.core.roles.RoleRecord;
+import mx.gob.pjpuebla.trials.error.InvalidVersionException;
 import mx.gob.pjpuebla.trials.error.NotFoundException;
-import mx.gob.pjpuebla.trials.error.OptimisticLockingFailureException;
+import mx.gob.pjpuebla.trials.core.utils.resource.ResourceUtilTest;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -19,11 +18,10 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -96,12 +94,12 @@ class PersonaResourceTest {
     @Test
     void create_success() throws Exception {
         RoleRecord roleRecord = new RoleRecord("JUEZ", "JUEZ");
-        given(mockPersonaService.create(PersonaSetUp.createPersona(), Arrays.asList(roleRecord)))
+        given(mockPersonaService.create(PersonaSetUp.createPersona(), List.of(roleRecord)))
                 .willReturn(personaRecordResponse);
 
         mockMvc.perform(
                 post("/api/core/personas")
-                        .content(asJsonString(PersonaSetUp.createPersona()))
+                        .content(ResourceUtilTest.asJsonString(PersonaSetUp.createPersona()))
                         .contentType(MediaType.APPLICATION_JSON)
                         .accept(MediaType.APPLICATION_JSON)
         ).andExpect(status().isOk());
@@ -110,12 +108,12 @@ class PersonaResourceTest {
     @Test
     void update_success() throws Exception {
         RoleRecord roleRecord = new RoleRecord("JUEZ", "JUEZ");
-        given(mockPersonaService.update(PersonaSetUp.createPersona(), Arrays.asList(roleRecord)))
+        given(mockPersonaService.update(PersonaSetUp.createPersona(), List.of(roleRecord)))
                 .willReturn(personaRecordResponse);
 
         mockMvc.perform(
                 put("/api/core/personas")
-                        .content(asJsonString(PersonaSetUp.createPersona()))
+                        .content(ResourceUtilTest.asJsonString(PersonaSetUp.createPersona()))
                         .contentType(MediaType.APPLICATION_JSON)
                         .accept(MediaType.APPLICATION_JSON)
         ).andExpect(status().isOk());
@@ -124,25 +122,15 @@ class PersonaResourceTest {
     @Test
     void update_error() throws Exception {
         RoleRecord roleRecord = new RoleRecord("JUEZ", "JUEZ");
-        given(mockPersonaService.update(PersonaSetUp.createPersona(), Arrays.asList(roleRecord)))
-                .willThrow(OptimisticLockingFailureException.class);
+        given(mockPersonaService.update(PersonaSetUp.createPersona(), List.of(roleRecord)))
+                .willThrow(InvalidVersionException.class);
 
         mockMvc.perform(
                 put("/api/core/personas")
-                        .content(asJsonString(PersonaSetUp.createPersona()))
+                        .content(ResourceUtilTest.asJsonString(PersonaSetUp.createPersona()))
                         .contentType(MediaType.APPLICATION_JSON)
                         .accept(MediaType.APPLICATION_JSON)
         ).andExpect(status().isOk());
-    }
-
-    private static String asJsonString(final Object obj) {
-        try {
-            final ObjectMapper mapper = new ObjectMapper();
-            mapper.registerModule(new JavaTimeModule());
-            return mapper.writeValueAsString(obj);
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
     }
 
     @Test
@@ -152,7 +140,7 @@ class PersonaResourceTest {
                 .willReturn(validPersonaRecord);
 
         mockMvc.perform(
-                get("/api/core/personas/curp/"+curp)
+                get("/api/core/personas/curp/" + curp)
                         .accept(MediaType.APPLICATION_JSON)
         ).andExpect(status().isOk());
     }
@@ -161,7 +149,7 @@ class PersonaResourceTest {
     void getAll_jueces() throws Exception {
         JuezRecord juezRecord = new JuezRecord(1L, "Juan Perez");
         given(mockPersonaService.findAllJueces(any(Integer.class)))
-                .willReturn(Arrays.asList(juezRecord));
+                .willReturn(List.of(juezRecord));
 
         mockMvc.perform(
                 get("/api/core/personas/jueces/" + anyInt())
